chapter05/chapter-5-native-multitenancy-with-argo-cd/dev-team-a/networkpolicy-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: dev-team-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
